--- a/SMaRT/SMaRT/SMaRT.vcxproj
+++ b/SMaRT/SMaRT/SMaRT.vcxproj
@@ -61,18 +61,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Armor.cpp" />
     <ClCompile Include="BaseScreen.cpp" />
+    <ClCompile Include="body.cpp" />
     <ClCompile Include="GameScreen.cpp" />
+    <ClCompile Include="legs.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="player.cpp" />
+    <ClCompile Include="Players.cpp" />
     <ClCompile Include="ScreenHandler.cpp" />
     <ClCompile Include="SMaRTObject.cpp" />
+    <ClCompile Include="socks.cpp" />
+    <ClCompile Include="Zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Armor.h" />
     <ClInclude Include="BaseScreen.h" />
+    <ClInclude Include="body.h" />
     <ClInclude Include="GameScreen.h" />
+    <ClInclude Include="head.h" />
+    <ClInclude Include="legs.h" />
     <ClInclude Include="MenuScreen.h" />
+    <ClInclude Include="player.h" />
+    <ClInclude Include="Players.h" />
     <ClInclude Include="ScreenHandler.h" />
     <ClInclude Include="SMaRTObject.h" />
+    <ClInclude Include="socks.h" />
+    <ClInclude Include="Zombie.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
