Fixed startup and shutdown

--- a/SMaRT/SMaRT/SMaRT.vcxproj.filters
+++ b/SMaRT/SMaRT/SMaRT.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Weapon.cpp">
       <Filter>Source Files\Weapon</Filter>
     </ClCompile>
+    <ClCompile Include="MenuScreen.cpp">
+      <Filter>Source Files\Screens</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ScreenHandler.h">
