--- a/SMaRT/SMaRT/SMaRT.vcxproj
+++ b/SMaRT/SMaRT/SMaRT.vcxproj
@@ -68,6 +68,7 @@
     <ClCompile Include="Head.cpp" />
     <ClCompile Include="legs.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuScreen.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="Players.cpp" />
     <ClCompile Include="ScreenHandler.cpp" />
